# tiktok-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  adb_pusher.py  agent.py  airtable_source.py  comment_agent.py  comment_reader_agent.py  comment_source.py  hivemq_source.py  imagekit_agent.py  imagekit_source.py  local_store.py  pyproject.toml  tiktok_commenter.py  tiktok_poster.py  tiktok_profile.py  tiktok_ui.py  watch_all.py
.claude/skills/check-es-logs/: SKILL.md  es_logs.py
core/: __init__.py  adb_pusher.py  comment_read_source.py  comment_source.py  dedup_store.py  device_lock.py  env_loader.py  es_log_handler.py  imagekit_agent.py  local_store.py  logging_setup.py  mqtt_queue.py  tiktok_ui.py
docs/: README.md  comment-on-post.md  post-image.md  read-comments.md
docs/internals/: architecture.md  device-automation.md  logging.md  queueing-and-state.md  setup.md
