[project]
name = "tiktok-agent"
version = "0.1.0"
description = "Poll the Airtable Posts queue, push each pending image to a connected Android phone over adb, and auto-post it to TikTok."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
tiktok-agent = "agent:_cli"
tiktok-source = "imagekit_source:_cli"
tiktok-airtable = "airtable_source:_cli"
tiktok-post = "tiktok_poster:_cli"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "agent.py",
    "imagekit_source.py",
    "airtable_source.py",
    "adb_pusher.py",
    "tiktok_poster.py",
    "env_loader.py",
]
