[project]
name = "tiktok-agent"
version = "1.0.0"
description = "Drain the HiveMQ work queue, push each pending image to a connected Android phone over adb, and auto-post it to TikTok."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["paho-mqtt>=2.0"]

[project.scripts]
tiktok-agent = "agent:_cli"
tiktok-source = "imagekit_source:_cli"
tiktok-hivemq = "hivemq_source:_cli"
tiktok-post = "tiktok_poster:_cli"
tiktok-commenter = "comment_agent:_cli"
tiktok-profile = "tiktok_profile:_cli"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    # CLI entry points (console scripts) stay at the top level
    "agent.py",
    "imagekit_source.py",
    "hivemq_source.py",
    "tiktok_poster.py",
    "tiktok_commenter.py",
    "comment_agent.py",
    "tiktok_profile.py",
    # shared, non-CLI library modules
    "core/*.py",
]
